Added inheritance example