@@ -4,18 +4,23 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class Main {
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, URISyntaxException {
         // URL to make the request to
-        String url = "https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY";
+        String urlString = "https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY";
+//        String urlString = "https://apod.nasa.gov/apod/image/2404/tse2024Dobbs_1024.jpg";
 
+        // Create a URI object
+        URI uri = new URI(urlString);
         // Create a URL object
-        URL apiUrl = new URL(url);
+        URL url = uri.toURL();
 
         // Open a connection to the URL
-        HttpURLConnection connection = (HttpURLConnection) apiUrl.openConnection();
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
         // Set the request method to GET
         connection.setRequestMethod("GET");
@@ -27,7 +32,7 @@ public class Main {
         // Read the response body
         BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
         String inputLine;
-        StringBuffer response = new StringBuffer();
+        StringBuilder response = new StringBuilder();
 
         while ((inputLine = in.readLine()) != null) {
             response.append(inputLine);
@@ -35,7 +40,7 @@ public class Main {
         in.close();
 
         // Print the response body
-        System.out.println("Response Body: " + response.toString());
+        System.out.println("Response Body: " + response);
 
         // Disconnect the connection
         connection.disconnect();
